styles.css
*, *::before, *::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-family: "Inter", sans-serif;
    font-size: 16px;
    font-optical-sizing: auto;
}

:root {
    --color-1: #1D1D1F;
    --color-2: #394150;
    --color-3: #D2D5DA;
    --color-4: #F3F4F6;
    --color-5: #FFFFFF;
    --color-6: #E5E7EB;
    --hero-width: 80rem;
    --hero-height: 15rem;
    --gap-1: 1.5rem;
    --gap-2: calc(var(--gap-1) / 3);
    --product-padding: 0 1.5rem;
    --input-height: 3rem;
    --input-padding: 1rem;
    --border-radius: 0.5rem;
    --font-size-1: 1rem;
    --font-size-2: 1.5rem;
}

/* LAYOUT */
.hero {
    position: relative;
    width: min(100%, var(--hero-width));
    height: calc(var(--hero-height) / 2);
    margin: auto;

    display: flex;
    justify-content: center;
    align-items: center;
    gap: var(--gap-1);
}
.hero-background {
    position: absolute;
    top: 0;
    z-index: -1;
    display: block;
    width: 100%;
    height: var(--hero-height);
}
.hero-background-image {
    width: 100%;
    height: 100%;
    object-fit: cover;    
}

main {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: "purchase contact";

    width: min(1200px, 95vw);
    margin: auto;
    border-radius: calc(var(--border-radius) * 2.5);
    overflow: hidden;
}
body {
    background-color: var(--color-4);
}
.purchase-section {
    grid-area: purchase;
    
    background-color: var(--color-6);
}
.contact-section {
    grid-area: contact;

    padding: var(--gap-1);
    background-color: var(--color-5);

    display: flex;
    flex-direction: column;
    gap: var(--gap-1);
}

.product {
    display: grid;
    grid-template-rows: 2rem 2rem 2rem;
    grid-template-columns: 6rem 4fr 1fr;
    grid-template-areas: 
    "picture    name        price" 
    "picture    colour      blank"
    "picture    amount      discard" ;
}

.product-picture {
    grid-area: picture;
    
    position: relative;
    background-color: var(--color-5);
    border-radius: var(--border-radius);
}
.iphone-image {
    width: 2.4375rem;
    height: auto;
}
.watch-image {
    width:  1.875rem;
    height: auto;
}
.imac-image {
    width: 5rem;
    height: auto;
}

.product-name {
    grid-area: name;
}
.product-color {
    grid-area: colour;
}
.product-amount {
    grid-area: amount;
    align-self: end;
}
.product-price {
    grid-area: price;
}
.product-remove {
    grid-area: discard;
    align-self: end;

    width: 1em;
    height: 1em;
    border: none;
    background: none;
    margin-left: auto;
    line-height: 0;
}
.product-remove:hover {
    cursor: pointer;
}

.coupon {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 0.5rem;
}
.coupon-code {
    width: 75%;
    background-color: var(--color-5);
}
.coupon-apply {
    flex: 1 0 8.3em;
    width: 25%;
}

.billing {
    display: flex;
    flex-direction: column;
    gap: var(--gap-2);
}
.billing-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.purchase-section > * {
    margin: var(--gap-1)
}

.contact-form {
    display: flex;
    flex-direction: column;
    gap: var(--gap-1);
}
.contact-form-element {
    display: flex;
    flex-direction: column;
    gap: var(--gap-2);
}
.contact-form-element > .input {
    background-color: var(--color-4);
}

/* MODULES */
.border-bottom {
    border-bottom: 1px solid var(--color-3);
    padding-bottom: var(--gap-1);
}

.product-image {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

button[type="submit"] {
    height: var(--input-height);
    border: none;
    border-radius: var(--border-radius);
    background-color: var(--color-1);
    color: var(--color-5);
    font-weight: 500;
    font-size: var(--font-size-1);
    padding: var(--input-padding);
}

.input {  
    height: var(--input-height);
    outline: none;
    border: 1px solid var(--color-3);
    border-radius: var(--border-radius);
    padding: var(--input-padding);
    font-size: var(--font-size-1);
}

select {
    padding: 0 var(--input-padding) !important;
    color: var(--color-1);
}

/* TYPOGRAPHY */
.hero-heading {
    color: var(--color-5);
    font-size: var(--font-size-2);
    font-weight: 700;
}
.hero-items {
    color: var(--color-5);
    font-size: calc(var(--font-size-1) / 1.3);
    display: block;
    background-color: var(--color-1);
    padding: 0.5em 1em;
    border-radius: 2em;
}

.sub-total, .tax {
    color: var(--color-2);
    font-weight: 600;
}
.total {
    color: var(--color-1);
    font-weight: 800;
}
.sub-total, .tax, .total, .contact-section {
    font-size: var(--font-size-1);
}
.input::placeholder {
   color: var(--color-3);
}
.contact-header {
    color: var(--color-1);
    font-weight: 700;
}
.form-label {
    color: #394150;
    font-size: calc(var(--font-size-1) * 0.9);
    font-weight: 600;
}
.product-name, .product-color, .product-amount, .product-price, .product-remove, .coupon-apply {
    font-size: var(--font-size-1);
}
.product-name, .product-price {
    color: var(--color-1);
    font-weight: 700;
}
.product-color, .product-amount, .product-remove {
    color: var(--color-2);
    font-weight: 500;
}
.product-name, .product-color, .product-amount {
    padding: var(--product-padding)
}

@media (max-width: 768px) {
    main {
        grid-template-columns: auto;
        grid-template-rows: 1fr 1fr;
        grid-template-areas: 
        "purchase"
        "contact";
    }
}

@media (max-width: 382px) { 
    .hero {
        flex-direction: column;
        gap: 0;
    }
    
    .product {
        grid-template-rows: 2rem 2rem 2rem 2rem;
        grid-template-columns: 6rem 1fr;
        grid-template-areas: 
        "picture    name"
        "picture    colour"
        "picture    amount"
        "price      discard";
    }
    .product-color, .product-price, .product-remove {
        align-self: center;
    }
    .product-price {
        justify-self: center;
    }
    .product-remove {
        margin: 0;
        padding: var(--product-padding);
    }
    
    .coupon {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
    .coupon-code, .coupon-apply {
        width: 100%;
    }
    .coupon-apply {
        flex: 1 0 var(--input-height);
    }
}

